--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,15 @@
 name=KRA_robot
-version=0.1.0-1
+version=0.1.2
 author=Karel Kropš <info@krops.cz>
-maintainer=
-sentence=Real Time Operating System for KRA Písek.
-paragraph= .
-category=robotizace a automatizace
+maintainer=Karel Kropš <info@krops.cz>
+sentence=Real Time and sensor and input/output operating System for KRA Písek.
+paragraph=podpurne tridy pro programovani robotu na krouzku robotizace a automatizace
+category=Timing Sensors Other
 url=https://github.com/karelkrops/KRA_robot
 architectures=avr
+depends=Arduino_FreeRTOS
+dot_a_linkage=false
+precompiled=false
+ldflags=
 licence=MIT
 includes=KRA_robot.h
