--- a/library.properties
+++ b/library.properties
@@ -1,13 +1,13 @@
 name=KRA_robot
-version=0.1.2
+version=1.0.5
 author=Karel Kropš <info@krops.cz>
 maintainer=Karel Kropš <info@krops.cz>
-sentence=Real Time and sensor and input/output operating System for KRA Písek.
+sentence=sensor and input/output operating System for KRA Písek.
 paragraph=podpurne tridy pro programovani robotu na krouzku robotizace a automatizace
 category=Timing Sensors Other
-url=https://github.com/karelkrops/KRA_robot
-architectures=avr
-depends=Arduino_FreeRTOS
+url=https://github.com/karelkrops/KRA_ArduinoLibraries/tree/master/KRA_robot
+architectures=stm32 ARM
+depends=
 dot_a_linkage=false
 precompiled=false
 ldflags=
